Fixed modal spacing issue

--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -9,7 +9,6 @@
 
 #inner-modal {
     width: 50%;
-    height: 60%;
     background-image: url('../images/graphpaper.jpg');
     display: flex;
     flex-flow: column;
@@ -17,7 +16,6 @@
     justify-content: space-around;
     align-items: center;
     color: black;
-    font-size: 2.5vmin;
     font-family: 'Permanent Marker', cursive;
     line-height: 1.5;
     position: absolute;
@@ -25,6 +23,10 @@
     transform: translate(-50%, -50%);
     cursor: default;
     transition: 1s;
+}
+
+#inner-modal p, #inner-modal h1 {
+    padding-bottom: 10%;
 }
 
 #inner-modal h1 {
@@ -94,9 +96,6 @@
     font-size: 3vmin;
 }
 
-.big-font {
-    font-size: 4.5vmin;
-    text-align: center;
-}
+
 
 
